--- a/config_tun_d5v.json
+++ b/config_tun_d5v.json
@@ -28,7 +28,7 @@
    [
      {"tag": "zhuzhai1", "address": "8.8.8.8", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "test1-fwtd8ygs"},
      {"tag": "zhuzhai2", "address": "8.8.8.8", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🇺🇸 美国-12月7日-38.89.134.235"},
-     {"tag": "fakeip", "address": "fakeip"}
+     {"tag": "fakeip", "address": "fakeip"},
      {"tag": "dns_direct", "address": "211.137.64.163", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🎯 全球直连"},
      {"tag": "dns_proxy", "address": "tls://8.8.8.8", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🚀 节点选择"}
    ],
@@ -42,6 +42,7 @@
      {"rule_set": "geosite-cn", "action": "route","server": "dns_direct"},
      {"rule_set": "geosite-geolocation-!cn", "server": "dns_proxy"}
    ],
+   "independent_cache": true,
    "final": "dns_proxy",
    "strategy": "ipv4_only"
 },
