--- a/config_tun_d5v.json
+++ b/config_tun_d5v.json
@@ -21,8 +21,7 @@
     }
   },
 
- "dns": 
- {
+ "dns":  {
    "fakeip": {"enabled": true, "inet4_range": "198.18.0.0/15", "inet6_range": "fc00::/18"},
    "servers": 
    [
