--- a/config_tun_d5v.json
+++ b/config_tun_d5v.json
@@ -25,7 +25,7 @@
    "fakeip": {"enabled": true, "inet4_range": "198.18.0.0/15", "inet6_range": "fc00::/18"},
    "servers": 
    [
-     {"tag": "fakeip", "address": "fakeip"},
+     {"tag": "Fakeip", "address": "fakeip"},
      {"tag": "dns_direct", "address": "211.137.64.163", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🎯 全球直连"},
      {"tag": "dns_proxy", "address": "tls://8.8.8.8", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🚀 节点选择"}
    ],
@@ -33,14 +33,14 @@
    [
      {"outbound": "any", "server": "dns_direct", "disable_cache": true},
      {"clash_mode": "Direct", "server": "dns_direct"},
-     {"clash_mode": "Global", "server": "fakeip"},
+     {"clash_mode": "Global", "server": "Fakeip"},
      {"rule_set": "geosite-cn", "action": "route","server": "dns_direct"},
      {
       "query_type": [
         "A",
         "AAAA"
       ],
-      "server": "fakeip"
+      "server": "Fakeip"
     }
    ], 
    "final": "dns_direct",
