--- a/config_tun_d5v.json
+++ b/config_tun_d5v.json
@@ -42,7 +42,7 @@
       ],
       "server": "Fakeip"
     },
-     {"protocol": "dns", "action": "reject"}
+     {"protocol": "dns", "action": "route", "server": "Fakeip"}
    ], 
    "final": "dns_direct",
    "strategy": "ipv4_only"
