--- a/config_tun_d5v.json
+++ b/config_tun_d5v.json
@@ -41,7 +41,7 @@
         "A",
         "AAAA"
       ],
-      "server": "Fakeip"
+      "server": "dns_direct"
     }
    ], 
    "final": "Fakeip",
