--- a/config_tun_d5v.json
+++ b/config_tun_d5v.json
@@ -26,23 +26,18 @@
    "servers": 
    [
      {"tag": "Fakeip", "address": "fakeip"},
-     {"tag": "dns_direct", "address": "211.137.64.163", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🎯 全球直连"}
+     {"tag": "dns_direct", "address": "211.137.64.163", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🎯 全球直连"},
+     {"tag": "dns_proxy", "address": "tls://8.8.8.8", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🚀 节点选择"}
    ],
    "rules": 
    [
      {"outbound": "any", "server": "dns_direct", "disable_cache": true},
-     {"source_ip_cidr": "192.168.31.44", "protocol": "dns", "server": "Fakeip"},
-     {"source_ip_cidr": "192.168.31.43", "protocol": "dns", "server": "Fakeip"},
+     {"source_ip_cidr": "192.168.31.44", "server": "Fakeip"},
+     {"source_ip_cidr": "192.168.31.43", "server": "Fakeip"},
      {"clash_mode": "Direct", "server": "dns_direct"},
-     {"clash_mode": "Global", "server": "Fakeip"},
+     {"clash_mode": "Global", "server": "dns_proxy"},
      {"rule_set": "geosite-cn", "action": "route","server": "dns_direct"},
-     {
-      "query_type": [
-        "A",
-        "AAAA"
-      ],
-      "server": "Fakeip"
-    }
+     {"rule_set": "geosite-geolocation-!cn", "server": "dns_proxy"},
    ], 
    "final": "dns_direct",
    "strategy": "ipv4_only"
