--- a/config_tun_d5v.json
+++ b/config_tun_d5v.json
@@ -32,8 +32,8 @@
    "rules": 
    [
      {"outbound": "any", "server": "dns_direct", "disable_cache": true},
-     {"source_ip_cidr": "192.168.31.44", "server": "Fakeip"},
-     {"source_ip_cidr": "192.168.31.43", "server": "Fakeip"},
+     {"source_ip_cidr": "192.168.31.44", "protocol": "dns", "server": "Fakeip"},
+     {"source_ip_cidr": "192.168.31.43", "protocol": "dns", "server": "Fakeip"},
      {"clash_mode": "Direct", "server": "dns_direct"},
      {"clash_mode": "Global", "server": "dns_proxy"},
      {"rule_set": "geosite-cn", "action": "route","server": "dns_direct"},
