--- a/config_tun_d5v.json
+++ b/config_tun_d5v.json
@@ -27,17 +27,16 @@
    [
      {"tag": "Fakeip", "address": "fakeip"},
      {"tag": "dns_direct", "address": "211.137.64.163", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🎯 全球直连"},
-     {"tag": "dns_proxy", "address": "tls://8.8.8.8", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🚀 节点选择"}
+     {"tag": "mosdns", "address": "127.0.0.1:5335", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🎯 全球直连"}
    ],
    "rules": 
    [
+     {"outbound": "any", "server": "dns_direct", "disable_cache": true},
      {"source_ip_cidr": "192.168.31.44", "protocol": "dns", "server": "Fakeip"},
      {"source_ip_cidr": "192.168.31.43", "protocol": "dns", "server": "Fakeip"},
-     {"outbound": "any", "server": "dns_direct", "disable_cache": true},
      {"clash_mode": "Direct", "server": "dns_direct"},
-     {"clash_mode": "Global", "server": "dns_proxy"},
+     {"clash_mode": "Global", "server": "Fakeip"},
      {"rule_set": "geosite-cn", "action": "route","server": "dns_direct"},
-     {"rule_set": "geosite-geolocation-!cn", "server": "Fakeip"},
      {
       "query_type": [
         "A",
@@ -46,7 +45,7 @@
       "server": "Fakeip"
     }
    ], 
-   "final": "dns_direct",
+   "final": "mosdns",
    "strategy": "ipv4_only"
 },
 
