--- a/config_tun.json
+++ b/config_tun.json
@@ -21,27 +21,34 @@
     }
   },
   
-  "dns": {
-    "servers": [
-      {"tag": "zhuzhai1", "address": "99.88.84.197", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "test1-fwtd8ygs"},
-      {"tag": "zhuzhai2", "address": "tcp://38.89.134.235", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🇺🇸 美国-12月7日-38.89.134.235"},
-      {"tag": "zhuzhai3", "address": "38.89.134.211", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🇺🇸 美国-12月7日-38.89.134.211"},
-      {"tag": "dns_direct", "address": "211.137.64.163", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🎯 全球直连"},
-      {"tag": "dns_proxy", "address": "tls://8.8.8.8", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🚀 节点选择"}
-    ],
-    "rules": [
-      { "outbound": "any", "server": "dns_direct", "disable_cache": true },
-      {"source_ip_cidr": "192.168.2.188", "server": "zhuzhai1"},
-      {"source_ip_cidr": "192.168.2.238", "server": "zhuzhai2"},
-      {"source_ip_cidr": "192.168.2.128", "server": "zhuzhai3"},
-      {"clash_mode": "Direct", "server": "dns_direct"},
-      {"clash_mode": "Global", "server": "dns_proxy"},
-      {"rule_set": "geosite-cn", "server": "dns_direct"},
-      {"rule_set": "geosite-geolocation-!cn", "server": "dns_proxy"}
-    ],
-    "final": "dns_proxy",
-    "strategy": "ipv4_only"
-  },
+  "dns":  {
+   "fakeip": {"enabled": true, "inet4_range": "198.18.0.0/15", "inet6_range": "fc00::/18"},
+   "servers": 
+   [
+     {"tag": "Fakeip", "address": "fakeip"},
+     {"tag": "dns_direct", "address": "211.137.64.163", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🎯 全球直连"},
+     {"tag": "mosdns", "address": "local:5335", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🎯 全球直连"}
+   ],
+   "rules": 
+   [
+     {"outbound": "any", "server": "dns_direct", "disable_cache": true},
+     {"source_ip_cidr": "192.168.31.44", "protocol": "dns", "server": "Fakeip"},
+     {"source_ip_cidr": "192.168.31.43", "protocol": "dns", "server": "Fakeip"},
+     {"clash_mode": "Direct", "server": "dns_direct"},
+     {"clash_mode": "Global", "server": "Fakeip"},
+     {"rule_set": "geosite-cn", "action": "route","server": "dns_direct"},
+     {"rule_set": "geosite-geolocation-!cn", "server": "Fakeip"},
+     {
+      "query_type": [
+        "A",
+        "AAAA"
+      ],
+      "server": "Fakeip"
+    }
+   ], 
+   "final": "dns_direct",
+   "strategy": "ipv4_only"
+},
 
     "inbounds": [
     {
