--- a/config_tun.json
+++ b/config_tun.json
@@ -32,8 +32,6 @@
    "rules": 
    [
      {"outbound": "any", "server": "dns_direct", "disable_cache": true},
-     {"source_ip_cidr": "192.168.31.44", "protocol": "dns", "server": "Fakeip"},
-     {"source_ip_cidr": "192.168.31.43", "protocol": "dns", "server": "Fakeip"},
      {"clash_mode": "Direct", "server": "dns_direct"},
      {"clash_mode": "Global", "server": "Fakeip"},
      {"rule_set": "geosite-cn","server": "dns_direct"},
@@ -51,6 +49,15 @@
 },
 
     "inbounds": [
+    {
+      "type": "direct",
+      "tag": "direct-in",
+      "listen": "::",
+      "listen_port": 5336,
+      "sniff": true,
+      "sniff_override_destination": false,
+      "sniff_timeout": "300ms"
+    },
     {
       "type": "tun",
       "address": "172.19.0.1/30",
