--- a/config_tun.json
+++ b/config_tun.json
@@ -52,7 +52,7 @@
     {
       "type": "direct",
       "tag": "direct-in",
-      "listen": "::",
+      "listen": "127.0.0.1",
       "listen_port": 5336,
       "sniff": true,
       "sniff_override_destination": false,
