--- a/meiao.clash.ini
+++ b/meiao.clash.ini
@@ -7,8 +7,8 @@
 ;电报群：https://t.me/qichiyuchat
 
 ;规则集定义
-ruleset=🐬 住宅家宽1,https://raw.githubusercontent.com/meiao123/public/refs/heads/main/zhuzhaijiakuan1.list
-ruleset=🐬 住宅家宽2,https://raw.githubusercontent.com/meiao123/public/refs/heads/main/zhuzhaijiakuan2.list
+SRC-IP-CIDR,192.168.31.44,🏡 家宽节点1
+SRC-IP-CIDR,192.168.31.44,🏡 家宽节点2
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/qichiyuhub/rule/master/Direct.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/qichiyuhub/rule/master/ProxyLite.list
 ruleset=🤖 AI,https://raw.githubusercontent.com/qichiyuhub/rule/master/AI.list
@@ -46,8 +46,6 @@ custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵
 custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 日本故转`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🛩️ 高速节点`[]🐸 手动切换
 custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🛩️ 高速节点`[]🎥 奈飞节点`[]🐸 手动切换
 custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🐸 手动切换
-custom_proxy_group=🐬 住宅家宽1`select`[]🏡 家宽节点1
-custom_proxy_group=🐬 住宅家宽2`select`[]🏡 家宽节点2
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🐸 手动切换
 custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🐸 手动切换
 
