--- a/config_tun.json
+++ b/config_tun.json
@@ -31,6 +31,8 @@
    "rules": 
    [
      {"outbound": "any", "server": "dns_direct", "disable_cache": true},
+     {"source_ip_cidr": "192.168.31.44", "protocol": "dns", "server": "Fakeip"},
+     {"source_ip_cidr": "192.168.31.43", "protocol": "dns", "server": "Fakeip"},
      {"clash_mode": "Direct", "server": "dns_direct"},
      {"clash_mode": "Global", "server": "Fakeip"},
      {"rule_set": "geosite-cn","server": "dns_direct"},
