--- a/config_tun.json
+++ b/config_tun.json
@@ -7,7 +7,7 @@
   
   "experimental": {
     "clash_api": {
-      "external_controller": "192.168.5.2:9095",
+      "external_controller": "192.168.6.1:9095",
       "external_ui": "/etc/sing-box/ui",
       "secret": "",
       "external_ui_download_url": "https://ghfast.top/https://github.com/MetaCubeX/metacubexd/archive/refs/heads/gh-pages.zip",
@@ -26,7 +26,7 @@
    "servers": 
    [
      {"tag": "Fakeip", "address": "fakeip"},
-     {"tag": "dns_direct", "address": "211.138.24.66", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🎯 全球直连"}
+     {"tag": "dns_direct", "address": "211.137.64.163", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🎯 全球直连"}
    ],
    "rules": 
    [
@@ -110,11 +110,16 @@
         "auto_detect_interface": true,
         "final": "🐠 漏网之鱼",
     "rules": [
-      { "type": "logical", "mode": "or", "rules": [{ "port": 53 }, { "protocol": "dns" }], "outbound": "dns-out" },
+      { "type": "logical", "mode": "or", "rules": [{ "port": 5345 }, { "protocol": "dns" }], "outbound": "dns-out" },
       {"clash_mode": "direct", "outbound": "🎯 全球直连"},
       {"clash_mode": "global", "outbound": "GLOBAL"},
-      {"source_ip_cidr": "192.168.5.35", "outbound": "test1-fwtd8ygs"},
-      {"source_ip_cidr": "192.168.5.36", "outbound": "🇺🇸 美国-12月7日-38.89.134.235"},
+      {"source_ip_cidr": "192.168.7.0/24", "outbound": "🇺🇸 美国-12月7日-38.89.134.235"},
+      {"source_ip_cidr": "192.168.8.0/24", "outbound": "🎯 全球直连"},
+      {"source_ip_cidr": "192.168.9.0/24", "outbound": "🎯 全球直连"},
+      {"source_ip_cidr": "192.168.10.0/24", "outbound": "🎯 全球直连"},
+      {"source_ip_cidr": "192.168.11.0/24", "outbound": "🎯 全球直连"},
+      {"source_ip_cidr": "192.168.12.0/24", "outbound": "🎯 全球直连"},
+      {"source_ip_cidr": "192.168.13.0/24", "outbound": "🎯 全球直连"},
       {"domain": ["clash.razord.top", "yacd.metacubex.one", "yacd.haishan.me", "d.metacubex.one"], "outbound": "🎯 全球直连"},
       {"rule_set": "geosite-private", "outbound": "🎯 全球直连"},
       {"rule_set": "geosite-chat", "outbound": "🤖 OpenAI"},
