--- a/config_tun.json
+++ b/config_tun.json
@@ -114,9 +114,9 @@
       {"clash_mode": "direct", "outbound": "🎯 全球直连"},
       {"clash_mode": "global", "outbound": "GLOBAL"},
       {"source_ip_cidr": "192.168.7.0/24", "outbound": "🇺🇸 美国-12月7日-38.89.134.235"},
-      {"source_ip_cidr": "192.168.8.0/24", "outbound": "🎯 全球直连"},
-      {"source_ip_cidr": "192.168.9.0/24", "outbound": "🎯 全球直连"},
-      {"source_ip_cidr": "192.168.10.0/24", "outbound": "🎯 全球直连"},
+      {"source_ip_cidr": "192.168.8.0/24", "outbound": "zhuzhai-tk02"},
+      {"source_ip_cidr": "192.168.9.0/24", "outbound": "zhuzhai-tk03"},
+      {"source_ip_cidr": "192.168.10.0/24", "outbound": "zhuzhai-tk04"},
       {"source_ip_cidr": "192.168.11.0/24", "outbound": "🎯 全球直连"},
       {"source_ip_cidr": "192.168.12.0/24", "outbound": "🎯 全球直连"},
       {"source_ip_cidr": "192.168.13.0/24", "outbound": "🎯 全球直连"},
