--- a/config_tun.json
+++ b/config_tun.json
@@ -1,145 +1,145 @@
 {
   "log": {
-    "disabled": false，
-    "level": "info"，
+    "disabled": false,
+    "level": "info",
     "timestamp": true
-  }，
+  },
   
   "experimental": {
     "clash_api": {
-      "external_controller": "192.168.6.1:9095"，
-      "external_ui": "/etc/sing-box/ui"，
-      "secret": ""，
-      "external_ui_download_url": "https://wuli.meiao.site/https://github.com/MetaCubeX/metacubexd/archive/refs/heads/gh-pages.zip"，
-      "external_ui_download_detour": "🎯 全球直连"，
+      "external_controller": "192.168.6.1:9095",
+      "external_ui": "/etc/sing-box/ui",
+      "secret": "",
+      "external_ui_download_url": "https://wuli.meiao.site/https://github.com/MetaCubeX/metacubexd/archive/refs/heads/gh-pages.zip",
+      "external_ui_download_detour": "🎯 全球直连",
       "default_mode": "rule"
-    }，
+    },
   "cache_file": {
-    "enabled": true，
-    "path": "/etc/sing-box/cache.db"，
+    "enabled": true,
+    "path": "/etc/sing-box/cache.db",
     "store_fakeip": false
     }
-  }，
+  },
   
   "dns":  {
-   "fakeip": {"enabled": true， "inet4_range": "198.18.0.0/15"， "inet6_range": "fc00::/18"}，
+   "fakeip": {"enabled": true, "inet4_range": "198.18.0.0/15", "inet6_range": "fc00::/18"},
    "servers": 
    [
-     {"tag": "Fakeip"， "address": "fakeip"}，
-     {"tag": "dns_direct"， "address": "211.137.64.163"， "address_strategy": "ipv4_only"， "strategy": "ipv4_only"， "detour": "🎯 全球直连"}
-   ]，
+     {"tag": "Fakeip", "address": "fakeip"},
+     {"tag": "dns_direct", "address": "211.137.64.163", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🎯 全球直连"}
+   ],
    "rules": 
    [
-     {"outbound": "any"， "server": "dns_direct"， "disable_cache": true}，
-     {"clash_mode": "Direct"， "server": "dns_direct"}，
-     {"clash_mode": "Global"， "server": "Fakeip"}，
-     {"rule_set": "geosite-cn"，"server": "dns_direct"}，
-     {"rule_set": "geosite-geolocation-!cn"， "server": "Fakeip"}，
+     {"outbound": "any", "server": "dns_direct", "disable_cache": true},
+     {"clash_mode": "Direct", "server": "dns_direct"},
+     {"clash_mode": "Global", "server": "Fakeip"},
+     {"rule_set": "geosite-cn","server": "dns_direct"},
+     {"rule_set": "geosite-geolocation-!cn", "server": "Fakeip"},
      {
       "query_type": [
-        "A"，
+        "A",
         "AAAA"
-      ]，
+      ],
       "server": "Fakeip"
     }
-   ]， 
-   "final": "dns_direct"，
+   ], 
+   "final": "dns_direct",
    "strategy": "ipv4_only"
-}，
+},
 
     "inbounds": [
     {
-      "type": "tun"，
-      "address": "172.19.0.1/30"，
-      "mtu": 9000，
-      "auto_route": true，
-      "sniff": true，
-      "stack": "system"，
+      "type": "tun",
+      "address": "172.19.0.1/30",
+      "mtu": 9000,
+      "auto_route": true,
+      "sniff": true,
+      "stack": "system",
       "platform": {
         "http_proxy": {
-          "enabled": true，
-          "server": "127.0.0.1"，
+          "enabled": true,
+          "server": "127.0.0.1",
           "server_port": 2080
         }
       }
-    }，
+    },
     {
-      "type": "mixed"，
-      "listen": "127.0.0.1"，
-      "listen_port": 2080，
-      "sniff": true，
+      "type": "mixed",
+      "listen": "127.0.0.1",
+      "listen_port": 2080,
+      "sniff": true,
       "users": []
-    }，
+    },
     {
-      "type": "direct"，
-      "tag": "direct-in"，
-      "listen": "::"，
-      "listen_port": 5345，
-      "sniff": true，
-      "sniff_override_destination": false，
+      "type": "direct",
+      "tag": "direct-in",
+      "listen": "::",
+      "listen_port": 5345,
+      "sniff": true,
+      "sniff_override_destination": false,
       "sniff_timeout": "300ms"
     }
-  ]，
+  ],
 
   "outbounds": [
-    { "tag": "🚀 节点选择"， "type": "selector"， "outbounds": ["🔯 香港自动"， "🇭🇰 香港节点"， "🇯🇵 日本节点"， "🇺🇲 美国节点"， "🐸 手动切换"， "♻️ 自动选择"， "🎯 全球直连"] }，
-    { "tag": "📹 YouTube"， "type": "selector"， "outbounds": ["🚀 节点选择"， "♻️ 自动选择"， "🔯 香港自动"， "🇭🇰 香港节点"， "🇯🇵 日本节点"， "🇺🇲 美国节点"， "🐸 手动切换"] }，
-    { "tag": "🤖 OpenAI"， "type": "selector"， "outbounds": ["🚀 节点选择"， "♻️ 自动选择"， "🔯 香港自动"， "🇭🇰 香港节点"， "🇯🇵 日本节点"， "🇺🇲 美国节点"， "🐸 手动切换"] }，
-    { "tag": "🍀 Google"， "type": "selector"， "outbounds": ["🚀 节点选择"， "♻️ 自动选择"， "🔯 香港自动"， "🇭🇰 香港节点"， "🇯🇵 日本节点"， "🇺🇲 美国节点"， "🐸 手动切换"] }，
-    { "tag": "👨‍💻 Github"， "type": "selector"， "outbounds": ["🚀 节点选择"， "♻️ 自动选择"， "🔯 香港自动"， "🇭🇰 香港节点"， "🇯🇵 日本节点"， "🇺🇲 美国节点"， "🐸 手动切换"] }，
-    { "tag": "🪟 Microsoft"， "type": "selector"， "outbounds": ["🚀 节点选择"， "♻️ 自动选择"， "🔯 香港自动"， "🇭🇰 香港节点"， "🇯🇵 日本节点"， "🇺🇲 美国节点"， "🎯 全球直连"] }，
-    { "tag": "🐬 OneDrive"， "type": "selector"， "outbounds": ["🚀 节点选择"， "♻️ 自动选择"， "🔯 香港自动"， "🇭🇰 香港节点"， "🇯🇵 日本节点"， "🇺🇲 美国节点"， "🐸 手动切换"] }，
-    { "tag": "🎵 TikTok", "type": "selector", "outbounds": ["🚀 节点选择"， "♻️ 自动选择"， "🔯 香港自动"， "🇭🇰 香港节点"， "🇯🇵 日本节点"， "🇺🇲 美国节点"， "🐸 手动切换"] }，
-    { "tag": "🎥 Netflix"， "type": "selector"， "outbounds": ["🚀 节点选择"， "♻️ 自动选择"， "🔯 香港自动"， "🇭🇰 香港节点"， "🇯🇵 日本节点"， "🇺🇲 美国节点"， "🐸 手动切换"] }，
-    { "tag": "📲 Telegram"， "type": "selector"， "outbounds": ["🚀 节点选择"， "♻️ 自动选择"， "🔯 香港自动"， "🇭🇰 香港节点"， "🇯🇵 日本节点"， "🇺🇲 美国节点"， "🐸 手动切换"] }，
-    { "tag": "🍏 Apple"， "type": "selector"， "outbounds": ["🎯 全球直连"， "🇭🇰 香港节点"， "🇯🇵 日本节点"， "🇺🇲 美国节点"] }，
-    { "tag": "🐠 漏网之鱼"， "type": "selector"， "outbounds": ["🚀 节点选择"，"🎯 全球直连"] }，
-    { "tag": "🐸 手动切换"， "type": "selector"， "outbounds": ["{all}"]}，
-    { "tag": "🤖 住宅家宽"， "type": "selector"， "outbounds": ["{all}"]， "filter": [{ "action": "include"， "keywords": ["38|89|tk0"] }] }，
-    { "tag": "🇭🇰 香港节点"， "type": "selector"， "outbounds": ["{all}"]， "filter": [{ "action": "include"， "keywords": ["🇭🇰|HK|hk|香港|港|HongKong"] }] }，
-    { "tag": "🇯🇵 日本节点"， "type": "selector"， "outbounds": ["{all}"]， "filter": [{ "action": "include"， "keywords": ["🇯🇵|JP|jp|日本|日|Japan"] }， { "action": "exclude"， "keywords": ["尼日|38|89|月"] }] }，
-    { "tag": "🇺🇲 美国节点"， "type": "selector"， "outbounds": ["{all}"]， "filter": [{ "action": "include"， "keywords": ["🇺🇸|US|us|美国|美|United States"] }， { "action": "exclude"， "keywords": ["香港|港|HK|hk|HongKong|Australia|Russian|Austria|38|89"] }] }，
-    { "tag": "🔯 香港自动"， "type": "urltest"， "outbounds": ["{all}"]， "filter": [{ "action": "include"， "keywords": ["🇭🇰|HK|hk|香港|港|HongKong"] }]， "url": "http://www.gstatic.com/generate_204"， "interval": "10m"， "tolerance": 50 }，
-    { "tag": "♻️ 自动选择"， "type": "urltest"， "outbounds": ["{all}"]， "filter": [{ "action": "exclude"， "keywords": ["网站|地址|剩余|过期|时间|有效|38|89|tk0"] }]， "url": "http://www.gstatic.com/generate_204"， "interval": "10m"， "tolerance": 50 }，
-    { "tag": "GLOBAL"， "type": "selector"， "outbounds": ["{all}"]}，
-    { "tag": "🎯 全球直连"， "type": "direct" }，
-    { "tag": "dns-out"， "type": "dns" }
-  ]，
+    { "tag": "🚀 节点选择", "type": "selector", "outbounds": ["🔯 香港自动", "🇭🇰 香港节点", "🇯🇵 日本节点", "🇺🇲 美国节点", "🐸 手动切换", "♻️ 自动选择", "🎯 全球直连"] },
+    { "tag": "📹 YouTube", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "🇯🇵 日本节点", "🇺🇲 美国节点", "🐸 手动切换"] },
+    { "tag": "🤖 OpenAI", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "🇯🇵 日本节点", "🇺🇲 美国节点", "🐸 手动切换"] },
+    { "tag": "🍀 Google", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "🇯🇵 日本节点", "🇺🇲 美国节点", "🐸 手动切换"] },
+    { "tag": "👨‍💻 Github", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "🇯🇵 日本节点", "🇺🇲 美国节点", "🐸 手动切换"] },
+    { "tag": "🪟 Microsoft", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "🇯🇵 日本节点", "🇺🇲 美国节点", "🎯 全球直连"] },
+    { "tag": "🐬 OneDrive", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "🇯🇵 日本节点", "🇺🇲 美国节点", "🐸 手动切换"] },
+    { "tag": "🎵 TikTok", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "🇯🇵 日本节点", "🇺🇲 美国节点", "🐸 手动切换"] },
+    { "tag": "🎥 Netflix", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "🇯🇵 日本节点", "🇺🇲 美国节点", "🐸 手动切换"] },
+    { "tag": "📲 Telegram", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "🇯🇵 日本节点", "🇺🇲 美国节点", "🐸 手动切换"] },
+    { "tag": "🍏 Apple", "type": "selector", "outbounds": ["🎯 全球直连", "🇭🇰 香港节点", "🇯🇵 日本节点", "🇺🇲 美国节点"] },
+    { "tag": "🐠 漏网之鱼", "type": "selector", "outbounds": ["🚀 节点选择","🎯 全球直连"] },
+    { "tag": "🐸 手动切换", "type": "selector", "outbounds": ["{all}"]},
+    { "tag": "🤖 住宅家宽", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["38|89|tk0"] }] },
+    { "tag": "🇭🇰 香港节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["🇭🇰|HK|hk|香港|港|HongKong"] }] },
+    { "tag": "🇯🇵 日本节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["🇯🇵|JP|jp|日本|日|Japan"] }, { "action": "exclude", "keywords": ["尼日|38|89|月"] }] },
+    { "tag": "🇺🇲 美国节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["🇺🇸|US|us|美国|美|United States"] }, { "action": "exclude", "keywords": ["香港|港|HK|hk|HongKong|Australia|Russian|Austria|38|89"] }] },
+    { "tag": "🔯 香港自动", "type": "urltest", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["🇭🇰|HK|hk|香港|港|HongKong"] }], "url": "http://www.gstatic.com/generate_204", "interval": "10m", "tolerance": 50 },
+    { "tag": "♻️ 自动选择", "type": "urltest", "outbounds": ["{all}"], "filter": [{ "action": "exclude", "keywords": ["网站|地址|剩余|过期|时间|有效|38|89|tk0"] }], "url": "http://www.gstatic.com/generate_204", "interval": "10m", "tolerance": 50 },
+    { "tag": "GLOBAL", "type": "selector", "outbounds": ["{all}"]},
+    { "tag": "🎯 全球直连", "type": "direct" },
+    { "tag": "dns-out", "type": "dns" }
+  ],
   
   "route": {
-        "auto_detect_interface": true，
-        "final": "🐠 漏网之鱼"，
+        "auto_detect_interface": true,
+        "final": "🐠 漏网之鱼",
     "rules": [
-      { "type": "logical"， "mode": "or"， "rules": [{ "port": 5345 }， { "protocol": "dns" }]， "outbound": "dns-out" }，
-      {"clash_mode": "direct"， "outbound": "🎯 全球直连"}，
-      {"clash_mode": "global"， "outbound": "GLOBAL"}，
-      {"source_ip_cidr": "192.168.10.0/24"， "outbound": "🇺🇸 美国-12月7日-38.89.134.235"}，
-      {"source_ip_cidr": "192.168.7.0/24"， "outbound": "zhuzhai-tk01"}，
-      {"source_ip_cidr": "192.168.8.0/24"， "outbound": "zhuzhai-tk02"}，
-      {"source_ip_cidr": "192.168.9.0/24"， "outbound": "zhuzhai-tk03"}，
-      {"source_ip_cidr": "192.168.11.0/24"， "outbound": "🎯 全球直连"}，
-      {"source_ip_cidr": "192.168.12.0/24"， "outbound": "🎯 全球直连"}，
-      {"source_ip_cidr": "192.168.13.0/24"， "outbound": "🎯 全球直连"}，
-      {"domain": ["clash.razord.top"， "yacd.metacubex.one"， "yacd.haishan.me"， "d.metacubex.one"]， "outbound": "🎯 全球直连"}，
-      {"rule_set": "geosite-private"， "outbound": "🎯 全球直连"}，
-      {"rule_set": "geosite-chat"， "outbound": "🤖 OpenAI"}，
-      {"rule_set": "geosite-youtube"， "outbound": "📹 YouTube"}，
-      {"rule_set": "geosite-github"， "outbound": "👨‍💻 Github"}，
-      {"rule_set": ["geosite-google"， "geoip-google"]， "outbound": "🍀 Google"}，
-      {"rule_set": ["geosite-telegram"， "geoip-telegram"]， "outbound": "📲 Telegram"}，
-      {"rule_set": "geosite-tiktok"， "outbound": "🎵 TikTok"}，
-      {"rule_set": ["geosite-netflix"， "geoip-netflix"]， "outbound": "🎥 Netflix"}，
-      {"rule_set": ["geosite-apple"， "geoip-apple"]， "outbound": "🍏 Apple"}，
-      {"rule_set": "geosite-onedrive"， "outbound": "🐬 OneDrive"}，
-      {"rule_set": "geosite-microsoft"， "outbound": "🪟 Microsoft"}，
-      {"rule_set": "geosite-geolocation-!cn"， "outbound": "🚀 节点选择"}，
-      {"rule_set": ["geoip-cn"， "geosite-cn"]， "outbound": "🎯 全球直连"}
-    ]，
+      { "type": "logical", "mode": "or", "rules": [{ "port": 5345 }, { "protocol": "dns" }], "outbound": "dns-out" },
+      {"clash_mode": "direct", "outbound": "🎯 全球直连"},
+      {"clash_mode": "global", "outbound": "GLOBAL"},
+      {"source_ip_cidr": "192.168.10.0/24", "outbound": "🇺🇸 美国-12月7日-38.89.134.235"},
+      {"source_ip_cidr": "192.168.7.0/24", "outbound": "zhuzhai-tk01"},
+      {"source_ip_cidr": "192.168.8.0/24", "outbound": "zhuzhai-tk02"},
+      {"source_ip_cidr": "192.168.9.0/24", "outbound": "zhuzhai-tk03"},
+      {"source_ip_cidr": "192.168.11.0/24", "outbound": "🎯 全球直连"},
+      {"source_ip_cidr": "192.168.12.0/24", "outbound": "🎯 全球直连"},
+      {"source_ip_cidr": "192.168.13.0/24", "outbound": "🎯 全球直连"},
+      {"domain": ["clash.razord.top", "yacd.metacubex.one", "yacd.haishan.me", "d.metacubex.one"], "outbound": "🎯 全球直连"},
+      {"rule_set": "geosite-private", "outbound": "🎯 全球直连"},
+      {"rule_set": "geosite-chat", "outbound": "🤖 OpenAI"},
+      {"rule_set": "geosite-youtube", "outbound": "📹 YouTube"},
+      {"rule_set": "geosite-github", "outbound": "👨‍💻 Github"},
+      {"rule_set": ["geosite-google", "geoip-google"], "outbound": "🍀 Google"},
+      {"rule_set": ["geosite-telegram", "geoip-telegram"], "outbound": "📲 Telegram"},
+      {"rule_set": "geosite-tiktok", "outbound": "🎵 TikTok"},
+      {"rule_set": ["geosite-netflix", "geoip-netflix"], "outbound": "🎥 Netflix"},
+      {"rule_set": ["geosite-apple", "geoip-apple"], "outbound": "🍏 Apple"},
+      {"rule_set": "geosite-onedrive", "outbound": "🐬 OneDrive"},
+      {"rule_set": "geosite-microsoft", "outbound": "🪟 Microsoft"},
+      {"rule_set": "geosite-geolocation-!cn", "outbound": "🚀 节点选择"},
+      {"rule_set": ["geoip-cn", "geosite-cn"], "outbound": "🎯 全球直连"}
+    ],
     
     "rule_set": [
-      { "tag": "geosite-chat"， "type": "remote"， "format": "binary"， "url": "https://wuli.meiao.site/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/category-ai-chat-!cn.srs"， "download_detour": "🎯 全球直连" }，
-      { "tag": "geosite-youtube"， "type": "remote"， "format": "binary"， "url": "https://wuli.meiao.site/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/youtube.srs"， "download_detour": "🎯 全球直连" }，
-      { "tag": "geosite-google"， "type": "remote"， "format": "binary"， "url": "https://wuli.meiao.site/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/google.srs"， "download_detour": "🎯 全球直连" }，
+      { "tag": "geosite-chat", "type": "remote", "format": "binary", "url": "https://wuli.meiao.site/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/category-ai-chat-!cn.srs", "download_detour": "🎯 全球直连" },
+      { "tag": "geosite-youtube", "type": "remote", "format": "binary", "url": "https://wuli.meiao.site/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/youtube.srs", "download_detour": "🎯 全球直连" },
+      { "tag": "geosite-google", "type": "remote", "format": "binary", "url": "https://wuli.meiao.site/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/google.srs", "download_detour": "🎯 全球直连" },
       { "tag": "geosite-github", "type": "remote", "format": "binary", "url": "https://wuli.meiao.site/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/github.srs", "download_detour": "🎯 全球直连" },
       { "tag": "geosite-telegram", "type": "remote", "format": "binary", "url": "https://wuli.meiao.site/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/telegram.srs", "download_detour": "🎯 全球直连" },
       { "tag": "geosite-tiktok", "type": "remote", "format": "binary", "url": "https://wuli.meiao.site/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/tiktok.srs", "download_detour": "🎯 全球直连" },
