--- a/config_tun.json
+++ b/config_tun.json
@@ -113,10 +113,10 @@
       { "type": "logical", "mode": "or", "rules": [{ "port": 5345 }, { "protocol": "dns" }], "outbound": "dns-out" },
       {"clash_mode": "direct", "outbound": "🎯 全球直连"},
       {"clash_mode": "global", "outbound": "GLOBAL"},
-      {"source_ip_cidr": "192.168.10.0/24", "outbound": "🎯 全球直连"},
-      {"source_ip_cidr": "192.168.7.0/24", "outbound": "🎯 全球直连"},
+      {"source_ip_cidr": "192.168.7.0/24", "outbound": "tk01"},
       {"source_ip_cidr": "192.168.8.0/24", "outbound": "🎯 全球直连"},
       {"source_ip_cidr": "192.168.9.0/24", "outbound": "🎯 全球直连"},
+      {"source_ip_cidr": "192.168.10.0/24", "outbound": "🎯 全球直连"},
       {"source_ip_cidr": "192.168.11.0/24", "outbound": "🎯 全球直连"},
       {"source_ip_cidr": "192.168.12.0/24", "outbound": "🎯 全球直连"},
       {"source_ip_cidr": "192.168.13.0/24", "outbound": "🎯 全球直连"},
