--- a/config_tun.json
+++ b/config_tun.json
@@ -115,9 +115,9 @@
       {"clash_mode": "direct", "outbound": "🎯 全球直连"},
       {"clash_mode": "global", "outbound": "GLOBAL"},
       {"source_ip_cidr": "192.168.7.0/24", "outbound": "tk01"},
-      {"source_ip_cidr": "192.168.8.0/24", "outbound": "🎯 全球直连"},
-      {"source_ip_cidr": "192.168.9.0/24", "outbound": "🎯 全球直连"},
-      {"source_ip_cidr": "192.168.10.0/24", "outbound": "🎯 全球直连"},
+      {"source_ip_cidr": "192.168.8.0/24", "outbound": "tk02"},
+      {"source_ip_cidr": "192.168.9.0/24", "outbound": "tk03"},
+      {"source_ip_cidr": "192.168.10.0/24", "outbound": "zhuzhai-tk03"},
       {"source_ip_cidr": "192.168.11.0/24", "outbound": "🎯 全球直连"},
       {"source_ip_cidr": "192.168.12.0/24", "outbound": "🎯 全球直连"},
       {"source_ip_cidr": "192.168.13.0/24", "outbound": "🎯 全球直连"},
