--- a/config_tun.json
+++ b/config_tun.json
@@ -116,6 +116,7 @@
       {"clash_mode": "global", "outbound": "GLOBAL"},
       {"source_ip_cidr": "192.168.7.0/24", "outbound": "🎯 全球直连"},
       {"source_ip_cidr": "192.168.8.0/24", "outbound": "🎯 全球直连"},
+      {"source_ip_cidr": "192.168.9.0/24", "outbound": "tk01"},
       {"domain": ["clash.razord.top", "yacd.metacubex.one", "yacd.haishan.me", "d.metacubex.one"], "outbound": "🎯 全球直连"},
       {"rule_set": "geosite-private", "outbound": "🎯 全球直连"},
       {"rule_set": "geosite-chat", "outbound": "🤖 OpenAI"},
