--- a/config_tun_ralip.json
+++ b/config_tun_ralip.json
@@ -24,7 +24,7 @@
  "dns":  {
    "servers": 
    [
-     {"tag": "dns_proxy", "address": tls:"//1.1.1.1", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🚀 节点选择"},
+     {"tag": "dns_proxy", "address": "tls://1.1.1.1", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🚀 节点选择"},
      {"tag": "dns_direct", "address": "211.137.64.163", "address_strategy": "ipv4_only", "strategy": "ipv4_only", "detour": "🎯 全球直连"}
    ],
    "rules": 
