--- a/config_tun_fkip.json
+++ b/config_tun_fkip.json
@@ -118,6 +118,7 @@
      {"source_ip_cidr": "192.168.3.0/24", "outbound": "tk01"},
      {"source_ip_cidr": "192.168.4.0/24", "outbound": "tk02"},
      {"source_ip_cidr": "192.168.5.0/24", "outbound": "tk03"},
+     {"source_ip_cidr": "192.168.7.0/24", "outbound": "tk04（中转）"},
      {"domain": ["clash.razord.top", "yacd.metacubex.one", "yacd.haishan.me", "d.metacubex.one"], "outbound": "🎯 全球直连"},
      {"rule_set": "geosite-private", "outbound": "🎯 全球直连"},
      {"rule_set": "geosite-chat", "outbound": "🤖 OpenAI"},
